--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "diy-archive",
   "private": true,
+  "module": "split.js",
   "description": "An archive of /r/DIY_eJuice.",
   "version": "0.1.0",
   "author": "ayan4m1 <andrew@bulletlogic.com>",
@@ -14,7 +15,7 @@
   "scripts": {
     "build": "gatsby build",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "gatsby develop",
+    "start": "cross-env GATSBY_CONCURRENT_FILES=1200 NODE_OPTIONS=--max-old-space-size=4096 gatsby develop",
     "serve": "gatsby serve",
     "lint": "npm run lint:js && npm run lint:markdown",
     "lint:js": "eslint ./src/",
@@ -29,10 +30,10 @@
     "bootstrap": "^5.3.0",
     "bootswatch": "^5.3.0",
     "classnames": "^2.3.2",
+    "cppzst": "^2.0.12",
     "date-fns": "^2.30.0",
     "dotenv": "^16.1.4",
     "gatsby": "^5.10.0",
-    "gatsby-plugin-algolia-docsearch-options": "^0.5.1",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.10.0",
     "gatsby-plugin-manifest": "^5.10.0",
@@ -47,14 +48,17 @@
     "gatsby-remark-images": "^7.10.0",
     "gatsby-remark-numbered-footnotes": "^1.0.1",
     "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-source-filesystem-with-queue": "^5.3.1",
     "gatsby-transformer-json": "^5.10.0",
     "gatsby-transformer-remark": "^6.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
+    "got": "^13.0.0",
     "graphql": "^16.6.0",
+    "jsonfile": "^6.1.0",
+    "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.7",
@@ -65,6 +69,7 @@
     "@babel/eslint-parser": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -74,6 +79,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-webpack-plugin": "^4.0.1",
     "gatsby-plugin-eslint": "^4.0.4",
+    "graceful-fs": "^4.2.11",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "markdownlint-cli": "^0.34.0",
