--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "git@github.com:diy-ejuice/diy-compendium.git"
   },
   "scripts": {
-    "build": "node parseData.mjs && gatsby build",
+    "parse": "node parseData.mjs",
+    "build": "gatsby build",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
