--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-json": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
+    "geopattern": "^1.2.3",
     "got": "^13.0.0",
     "graphql": "^16.6.0",
     "jsonfile": "^6.1.0",
@@ -54,6 +55,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-geopattern": "^2.0.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.7",
     "sass": "^1.63.3",
