--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An archive of /r/DIY_eJuice.",
   "version": "0.1.0",
   "author": "ayan4m1 <andrew@bulletlogic.com>",
-  "homepage": "https://archive.diyejuice.org",
+  "homepage": "https://archive.ejoose.org",
   "license": "MIT",
   "main": "n/a",
   "repository": {
@@ -20,69 +20,70 @@
     "serve": "gatsby serve",
     "lint": "npm run lint:js && npm run lint:markdown",
     "lint:js": "eslint ./src/",
-    "lint:markdown": "markdownlint ./src/docs/**/*.md"
+    "lint:markdown": "markdownlint ./src/docs/**/*.md",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.22.5",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@babel/core": "^7.24.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "bootstrap": "^5.3.0",
-    "bootswatch": "^5.3.0",
-    "classnames": "^2.3.2",
+    "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
+    "classnames": "^2.5.1",
     "cppzst": "^2.0.12",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.1.4",
-    "gatsby": "^5.10.0",
+    "dotenv": "^16.4.5",
+    "gatsby": "^5.13.3",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-image": "^3.10.0",
-    "gatsby-plugin-manifest": "^5.10.0",
-    "gatsby-plugin-offline": "^6.10.0",
-    "gatsby-plugin-react-helmet": "^6.10.0",
-    "gatsby-plugin-sass": "^6.10.0",
-    "gatsby-plugin-sharp": "^5.10.0",
-    "gatsby-plugin-sitemap": "^6.10.0",
-    "gatsby-source-filesystem": "^5.10.0",
-    "gatsby-transformer-json": "^5.10.0",
-    "gatsby-transformer-sharp": "^5.10.0",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-json": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "geopattern": "^1.2.3",
     "got": "^13.0.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
     "jsonfile": "^6.1.0",
     "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-geopattern": "^2.0.0",
+    "react-geopattern": "^2.0.2",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.7",
-    "sass": "^1.63.3",
-    "sharp": "^0.32.1"
+    "sass": "^1.72.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-webpack-plugin": "^4.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-webpack-plugin": "^4.1.0",
     "gatsby-plugin-eslint": "^4.0.4",
     "graceful-fs": "^4.2.11",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "markdownlint-cli": "^0.34.0",
-    "postcss": "^8.4.24",
-    "postcss-scss": "^4.0.6",
-    "prettier": "^2.8.8",
-    "stylelint": "^15.7.0",
-    "stylelint-config-recommended": "^12.0.0"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "markdownlint-cli": "^0.39.0",
+    "postcss": "^8.4.38",
+    "postcss-scss": "^4.0.9",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.3.1",
+    "stylelint-config-recommended": "^14.0.0"
   }
 }
