upgrade to eslint 9, switch to yarn, add gatsby-plugin-root-import

--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "gatsby develop",
     "serve": "gatsby serve",
-    "lint": "npm run lint:js && npm run lint:markdown",
-    "lint:js": "eslint ./src/",
-    "lint:markdown": "markdownlint ./src/docs/**/*.md",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "lint:js": "eslint ./src/**/*.js",
+    "lint:scss": "stylelint ./src/**/*.scss",
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.24.9",
+    "@babel/core": "^7.25.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -36,10 +36,11 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "gatsby": "^5.13.7",
+    "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-offline": "^6.13.2",
+    "gatsby-plugin-offline": "^6.13.3",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
@@ -56,34 +57,35 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-geopattern": "^2.0.2",
+    "react-geopattern": "^2.0.4",
     "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.7",
-    "sass": "^1.77.8",
-    "sharp": "^0.33.4"
+    "sass": "^1.79.3",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.24.8",
-    "@babel/preset-env": "^7.24.8",
+    "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@eslint/js": "^9.11.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-import-x": "^4.3.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-04bd67a4-20240924",
     "eslint-webpack-plugin": "^4.2.0",
-    "gatsby-plugin-eslint": "^4.0.4",
-    "graceful-fs": "^4.2.11",
-    "husky": "^9.1.1",
-    "lint-staged": "^15.2.7",
-    "markdownlint-cli": "^0.41.0",
-    "postcss": "^8.4.39",
+    "globals": "^15.9.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "markdownlint-cli": "^0.42.0",
+    "postcss": "^8.4.47",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.9.0",
     "stylelint-config-recommended": "^14.0.1"
   }
 }
