--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.26.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@babel/core": "^7.26.7",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "classnames": "^2.5.1",
     "cppzst": "^2.0.12",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "gatsby": "^5.14.0",
+    "dotenv": "^16.4.7",
+    "gatsby": "^5.14.1",
     "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.14.0",
@@ -49,42 +49,43 @@
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "geopattern": "^1.2.3",
-    "graphql": "^16.9.0",
+    "graphql": "^16.10.0",
     "jsonfile": "^6.1.0",
     "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
-    "react-geopattern": "^2.0.4",
+    "react-geopattern": "^2.0.5",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^9.0.1",
-    "sass": "^1.81.0",
+    "react-markdown": "^9.0.3",
+    "sass": "^1.83.4",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
-    "@babel/eslint-parser": "^7.25.9",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
-    "@eslint/js": "^9.15.0",
+    "@babel/eslint-parser": "^7.26.5",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
+    "@eslint/js": "^9.19.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.15.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^4.4.2",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-webpack-plugin": "^4.2.0",
-    "globals": "^15.12.0",
+    "globals": "^15.14.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
-    "markdownlint-cli": "^0.42.0",
-    "postcss": "^8.4.49",
+    "lint-staged": "^15.4.2",
+    "markdownlint-cli": "^0.44.0",
+    "postcss": "^8.5.1",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.3.3",
-    "stylelint": "^16.10.0",
-    "stylelint-config-recommended": "^14.0.1"
+    "prettier": "^3.4.2",
+    "stylelint": "^16.14.0",
+    "stylelint-config-recommended": "^15.0.0",
+    "webpack": "^5.97.1"
   }
 }
