--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.26.7",
+    "@babel/core": "^7.26.9",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -54,38 +54,38 @@
     "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.8",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-geopattern": "^2.0.5",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^9.0.3",
-    "sass": "^1.83.4",
+    "react-markdown": "9.1.0",
+    "sass": "^1.85.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
-    "@babel/eslint-parser": "^7.26.5",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/eslint-parser": "^7.26.8",
+    "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
-    "@eslint/js": "^9.19.0",
+    "@eslint/js": "^9.21.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import-x": "^4.6.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-webpack-plugin": "^4.2.0",
-    "globals": "^15.14.0",
+    "eslint-webpack-plugin": "^5.0.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.2",
+    "lint-staged": "^15.4.3",
     "markdownlint-cli": "^0.44.0",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.3",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.4.2",
-    "stylelint": "^16.14.0",
+    "prettier": "^3.5.2",
+    "stylelint": "^16.14.1",
     "stylelint-config-recommended": "^15.0.0",
-    "webpack": "^5.97.1"
+    "webpack": "^5.98.0"
   }
 }
