--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.26.10",
+    "@babel/core": "^7.27.4",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "bootstrap": "^5.3.3",
-    "bootswatch": "^5.3.3",
+    "bootstrap": "^5.3.7",
+    "bootswatch": "^5.3.6",
     "classnames": "^2.5.1",
     "cppzst": "^2.0.12",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "gatsby": "^5.14.1",
+    "dotenv": "^16.5.0",
+    "gatsby": "^5.14.4",
     "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.14.0",
@@ -49,43 +49,45 @@
     "gatsby-transformer-json": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
     "geopattern": "^1.2.3",
-    "graphql": "^16.10.0",
+    "graphql": "^16.11.0",
     "jsonfile": "^6.1.0",
     "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.9",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
-    "react-geopattern": "^2.0.5",
+    "react-geopattern": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "10.1.0",
-    "sass": "^1.86.0",
-    "sharp": "^0.33.5"
+    "sass": "^1.89.2",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
-    "@babel/eslint-parser": "^7.27.0",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@eslint/js": "^9.23.0",
+    "@babel/eslint-parser": "^7.27.5",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@eslint/js": "^9.29.0",
+    "@types/react": "^19.1.8",
     "cross-env": "^7.0.3",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-import-x": "^4.9.1",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import-x": "^4.15.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.4",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-prettier": "^5.5.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-webpack-plugin": "^5.0.0",
-    "globals": "^16.0.0",
+    "eslint-webpack-plugin": "^5.0.2",
+    "globals": "^16.2.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.5.0",
-    "markdownlint-cli": "^0.44.0",
-    "postcss": "^8.5.3",
+    "lint-staged": "^16.1.2",
+    "markdownlint-cli": "^0.45.0",
+    "postcss": "^8.5.6",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.5.3",
-    "stylelint": "^16.16.0",
-    "stylelint-config-recommended": "^15.0.0",
-    "webpack": "^5.98.0"
-  }
+    "stylelint": "^16.20.0",
+    "stylelint-config-recommended": "^16.0.0",
+    "webpack": "^5.99.9"
+  },
+  "packageManager": "yarn@4.9.2"
 }
