--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.28.0",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@babel/core": "^7.28.3",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.5",
     "bootstrap": "^5.3.7",
     "bootswatch": "^5.3.7",
     "classnames": "^2.5.1",
     "cppzst": "^2.0.12",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.0",
-    "gatsby": "^5.14.5",
+    "dotenv": "^17.2.1",
+    "gatsby": "^5.14.6",
     "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^3.14.0",
@@ -50,7 +50,7 @@
     "gatsby-transformer-sharp": "^5.14.0",
     "geopattern": "^1.2.3",
     "graphql": "^16.11.0",
-    "jsonfile": "^6.1.0",
+    "jsonfile": "^6.2.0",
     "mkdirp": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -59,35 +59,35 @@
     "react-geopattern": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-markdown": "10.1.0",
-    "sass": "^1.89.2",
+    "sass": "^1.90.0",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
     "@babel/eslint-parser": "^7.28.0",
-    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
-    "@eslint/js": "^9.31.0",
-    "@types/react": "^19.1.8",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.31.0",
-    "eslint-config-prettier": "^10.1.5",
+    "@eslint/js": "^9.33.0",
+    "@types/react": "18.3.23",
+    "cross-env": "^10.0.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-webpack-plugin": "^5.0.2",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
+    "lint-staged": "^16.1.5",
     "markdownlint-cli": "^0.45.0",
     "postcss": "^8.5.6",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
-    "stylelint": "^16.22.0",
-    "stylelint-config-recommended": "^16.0.0",
-    "webpack": "^5.100.2"
+    "stylelint": "^16.23.1",
+    "stylelint-config-recommended": "^17.0.0",
+    "webpack": "^5.101.3"
   },
   "packageManager": "yarn@4.9.2"
 }
