--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -32,12 +32,15 @@ defaults:
     shell: bash
 
 jobs:
+  # Parse Reddit data
+  parse:
+    uses: ./.github/workflows/parser.yml
   # Build job
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Detect package manager
         id: detect-package-manager
         run: |
