--- a/.github/workflows/parser.yml
+++ b/.github/workflows/parser.yml
@@ -1,6 +1,7 @@
 name: Parse Reddit data
 
-on: workflow_dispatch
+on:
+  workflow_call:
 
 defaults:
   run:
@@ -11,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       - name: Detect package manager
         id: detect-package-manager
         run: |
