--- a/package.json
+++ b/package.json
@@ -24,30 +24,30 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@babel/core": "^7.28.3",
-    "@fortawesome/fontawesome-svg-core": "^7.0.0",
-    "@fortawesome/free-brands-svg-icons": "^7.0.0",
-    "@fortawesome/free-solid-svg-icons": "^7.0.0",
-    "@fortawesome/react-fontawesome": "^0.2.5",
-    "bootstrap": "^5.3.7",
-    "bootswatch": "^5.3.7",
+    "@babel/core": "^7.28.4",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "0.2.6",
+    "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
     "classnames": "^2.5.1",
     "cppzst": "^2.0.12",
     "date-fns": "^4.1.0",
-    "dotenv": "^17.2.1",
-    "gatsby": "^5.14.6",
+    "dotenv": "^17.2.2",
+    "gatsby": "^5.15.0",
     "gatsby-plugin-eslint": "^4.0.4",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-image": "^3.14.0",
-    "gatsby-plugin-manifest": "^5.14.0",
-    "gatsby-plugin-offline": "^6.14.0",
-    "gatsby-plugin-react-helmet": "^6.14.0",
-    "gatsby-plugin-sass": "^6.14.0",
-    "gatsby-plugin-sharp": "^5.14.0",
-    "gatsby-plugin-sitemap": "^6.14.0",
-    "gatsby-source-filesystem": "^5.14.0",
-    "gatsby-transformer-json": "^5.14.0",
-    "gatsby-transformer-sharp": "^5.14.0",
+    "gatsby-plugin-image": "^3.15.0",
+    "gatsby-plugin-manifest": "^5.15.0",
+    "gatsby-plugin-offline": "^6.15.0",
+    "gatsby-plugin-react-helmet": "^6.15.0",
+    "gatsby-plugin-sass": "^6.15.0",
+    "gatsby-plugin-sharp": "^5.15.0",
+    "gatsby-plugin-sitemap": "^6.15.0",
+    "gatsby-source-filesystem": "^5.15.0",
+    "gatsby-transformer-json": "^5.15.0",
+    "gatsby-transformer-sharp": "^5.15.0",
     "geopattern": "^1.2.3",
     "graphql": "^16.11.0",
     "jsonfile": "^6.2.0",
@@ -56,21 +56,21 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
-    "react-geopattern": "^3.0.0",
+    "react-geopattern": "^3.1.3",
     "react-helmet": "^6.1.0",
     "react-markdown": "10.1.0",
-    "sass": "^1.90.0",
+    "sass": "^1.92.1",
     "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@ayan4m1/gatsby-plugin-root-import": "^2.0.10",
-    "@babel/eslint-parser": "^7.28.0",
+    "@babel/eslint-parser": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.35.0",
     "@types/react": "18.3.23",
     "cross-env": "^10.0.0",
-    "eslint": "^9.33.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import-x": "^4.16.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -78,14 +78,14 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-webpack-plugin": "^5.0.2",
-    "globals": "^16.3.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.5",
+    "lint-staged": "^16.1.6",
     "markdownlint-cli": "^0.45.0",
     "postcss": "^8.5.6",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.6.2",
-    "stylelint": "^16.23.1",
+    "stylelint": "^16.24.0",
     "stylelint-config-recommended": "^17.0.0",
     "webpack": "^5.101.3"
   },
