--- a/.github/workflows/gatsby.yml
+++ b/.github/workflows/gatsby.yml
@@ -38,6 +38,7 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    needs: parse
     steps:
       - name: Checkout
         uses: actions/checkout@v5
